# FundamentalsSimulationMethods

./: .gitignore  LICENSE  README.md  README.txt
exercise1/: .gitignore  CMakeLists.txt  part1.cpp  part2.cpp
exercise1/analysis/: adjustedF.txt  f.txt  plot.gnu
exercise1/latex/: main.tex
exercise1/latex/content/: exercise1.tex  exercise2.tex
exercise10/: exercise10.ipynb
exercise10/kelvin_helmhotz_instability/: exercise10_part2.ipynb
exercise10/kelvin_helmhotz_instability/.ipynb_checkpoints/: exercise10_part2-checkpoint.ipynb
exercise10/kelvin_helmhotz_instability/athena4.2/: config.status  kelvin.param  kl.0000.tab  kl.hst
exercise10/kelvin_helmhotz_instability/kelvin/: kelvin.c  kelvin.param
exercise11/: exercise_11.1.ipynb  exercise_11.2.ipynb
exercise12/freyja/rejection/: .vimrc.local  compile_commands.json  makefile  rejection  tmp
exercise2/: doublePendulum.ipynb  ex2_dominik.py  plotPendulum.py
exercise2/freyja/: .vimrc.local  compile_commands.json  double_pendulum  makefile
exercise2/freyja/inc/: double_pendulum.h  pendulum_energy.h
exercise2/latex/: main.fdb_latexmk  main.fls  main.tex
exercise3/freyja/: .vimrc.local  compile_commands.json  makefile  orbits
exercise3/hauke/: N-BodyProblem.ipynb  TwoBodyProblem.ipynb  TwoBodyProblem.tex
exercise4/hauke/: .gitignore  call_tree.py  exercise_No5.py  result.txt  result2.txt  tree.c  tree.py
exercise5/: exercise5.ipynb
exercise6/freyja/: .vimrc.local  diffusion  heat_diffusion.tikz  makefile
exercise6/hauke/: diffusion1.ipynb
exercise8/: ex_01.py  exercise8.ipynb
(+639 files in other folders)
